--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(cal input.cpp)
 
-target_link_libraries(cal ${ALL_THIRD_PARTY_LIBRARIES})
+add_subdirectory(Lib)
+add_subdirectory(CommandLineApps)
