--- a/Code/Lib/CMakeLists.txt
+++ b/Code/Lib/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(stringcal gas.cpp)
+add_library(stringcal shuntingYard.cpp shuntingYard.h)
 
 target_link_libraries(stringcal ${ALL_THIRD_PARTY_LIBRARIES})
