Set up unit test.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 # CMake 3.16 is needed for Apple clang
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.15)
 project(stringcal)
 
 
@@ -7,6 +7,11 @@ project(stringcal)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+
+# Testing option, keep off for now
+option(BUILD_TESTING "Build Unit tests." ON)
+option(BUILD_SHARED_LIBS "Build Shared Libraries" OFF)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Valid options are Release or Debug" FORCE)
@@ -22,7 +27,21 @@ message("CMAKE_BINARY_DIR=${CMAKE_BINARY_DIR}")
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
 
+foreach(type LIBRARY RUNTIME ARCHIVE)
+  set(output_dir ${CMAKE_BINARY_DIR}/bin)
+  set(CMAKE_${type}_OUTPUT_DIRECTORY ${output_dir} CACHE INTERNAL "Single output directory for building all libraries.")
+  mark_as_advanced(CMAKE_${type}_OUTPUT_DIRECTORY)
+endforeach()
+
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/Code/Lib)
 include_directories(${CMAKE_BINARY_DIR})
+
+# Add main code folder
 add_subdirectory(Code)
+
+if(BUILD_TESTING)
+  set(TEMP_DIR ${CMAKE_BINARY_DIR}/Testing/Temporary)
+  include_directories(${CMAKE_SOURCE_DIR}/Testing/)
+  add_subdirectory(Testing)
+endif()
