Setup to use C++20 coroutine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 # CMake 3.16 is needed for Apple clang
-cmake_minimum_required(VERSION 3.15)
+cmake_minimum_required(VERSION 3.16)
 project(stringcal)
 
 
 # Set language property 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+set (CMAKE_CXX_FLAGS "-fcoroutines") # GCC only
 
 # Testing option, keep off for now
 option(BUILD_TESTING "Build Unit tests." ON)
