--- a/Code/Lib/CMakeLists.txt
+++ b/Code/Lib/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_library(stringcal shuntingYard.cpp shuntingYard.h)
+add_library(stringcal shuntingYard.cpp shuntingYard.h generator.h)
+
 
 target_link_libraries(stringcal ${ALL_THIRD_PARTY_LIBRARIES})
+# target_link_options(stringcal -fcoroutines)
